2024-05-09T01:04:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/9010719743 # 255
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-09
* notice: last 14d: unq all: 15 123
* notice: prev accum: outdated-unq outdated-all / unq all: 634 3477 / 657 3598
* notice: next accum: outdated-unq outdated-all / unq all: 641 3499 / 658 3622
* notice: prev exec diff / last date diff / accum: unq all: +1 +24 -0 -0 / +1 +24 -0 -0 / 1 24
* notice: removed / changed dates: [2024-04-24] / [2024-05-08]

2024-05-07T16:17:03Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8988806767 # 251
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-07
* notice: last 14d: unq all: 20 121
* notice: prev accum: outdated-unq outdated-all / unq all: 634 3477 / 656 3594
* notice: next accum: outdated-unq outdated-all / unq all: 634 3477 / 657 3598
* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
* notice: removed / changed dates: [] / [2024-05-07]

2024-05-06T08:18:31Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8966124568 # 247
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-05-06
* notice: last 14d: unq all: 19 117
* notice: prev accum: outdated-unq outdated-all / unq all: 633 3475 / 655 3562
* notice: next accum: outdated-unq outdated-all / unq all: 634 3477 / 656 3594
* notice: prev exec diff / last date diff / accum: unq all: +1 +32 -0 -0 / +1 +32 -0 -0 / 1 32
* notice: removed / changed dates: [2024-04-22] / [2024-05-06]

2024-05-05T16:18:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8959568502 # 245