@@ -1,6 +1,6 @@
 {
-  "count": 123,
-  "uniques": 15,
+  "count": 132,
+  "uniques": 18,
   "views": [
     {
       "timestamp": "2024-04-25T00:00:00Z",
@@ -66,6 +66,11 @@
       "timestamp": "2024-05-08T00:00:00Z",
       "count": 24,
       "uniques": 1
+    },
+    {
+      "timestamp": "2024-05-09T00:00:00Z",
+      "count": 9,
+      "uniques": 3
     }
   ]
 }
